--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aiman Hasim</title>
+    <meta property="og:image" content="/image.png">
+    <link rel="favicon" href="/favicon.ico">
 </head>
 <body>
     <h1>My First Portfolio</h1>
+    <p>Made by Aiman Hasim</p>
 </body>
 </html>
