--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aiman Hasim</title>
+    <title>Portfolio | Aiman Hasim</title>
     <meta property="og:image" content="/image.png">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.aimanhasim.com/" />
+    <meta property="og:title" content="Portfolio | Aiman Hasim" />
+    <meta property="og:description" content="Aiman Hasim's personal website" />
     <link rel="favicon" href="/favicon.ico">
 </head>
 <body>
